Text gap and CSS fixes

--- a/inductor.css
+++ b/inductor.css
@@ -14,9 +14,9 @@ header {
 
 canvas.inductorClass {
     background: rgb(255, 255, 255);
-    margin: 0px;
-    padding: 5px;
-    border: 1px solid rgb(0, 0, 0);
+    margin: 1px;
+    padding: 2px;
+    border: 0px solid rgb(0, 0, 0);
     display: block; 
     box-sizing: border-box; 
 }
